dev: tensors, gfx refactor

--- a/app/playground/public/index.html
+++ b/app/playground/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://unpkg.com/react-plotly.js@1.0.1/dist/create-plotly-component.js"></script>
+    <script src="https://unpkg.com/deeplearn@latest"></script>
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
